Fix fullscreen mode styling issues by clearing inline styles and adjusting z-index

--- a/resources/ace-dmoj.scss
+++ b/resources/ace-dmoj.scss
@@ -68,7 +68,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 2147483000;
     overflow: auto;
 
     .django-ace-max_min {
